<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".activity.ActivityAddDoctor">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_with_radius_12"
        android:contentDescription="@string/contentDescription"
        android:elevation="@dimen/_1sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintCircleRadius="@dimen/_16sdp"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/pink" />

    <TextView
        android:id="@+id/tvAddDoctor"
        style="@style/st_tv_normal.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/add_doctor"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDoctorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_doctor_name"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvAddDoctor"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDoctorName"
            style="@style/st_et_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDoctorSpecialization"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/hint_doctor_specialization"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@+id/tilDoctorName"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDoctorSpecialization"
            style="@style/st_et_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAdd"
        style="@style/st_btn_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lbl_add"
        app:layout_constraintTop_toBottomOf="@+id/tilDoctorSpecialization"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        android:layout_marginTop="@dimen/_26sdp"
        android:layout_marginHorizontal="@dimen/_46sdp"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>