<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_with_radius_12"
        android:contentDescription="@string/contentDescription"
        android:elevation="@dimen/_1sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintCircleRadius="@dimen/_16sdp"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/pink" />

    <TextView
        android:id="@+id/tvMyDoctor"
        style="@style/st_tv_normal.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/my_doctors"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSelectAll"
        style="@style/st_tv_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/select_all"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/pink"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvMyDoctor"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16sdp" />

    <EditText
        android:id="@+id/etSearch"
        style="@style/st_et_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:hint="@string/hint_search_doctor"
        android:drawablePadding="@dimen/_12sdp"
        android:padding="@dimen/_12sdp"
        app:drawableTint="@color/clr_tv_light_gray"
        android:inputType="text"
        android:elevation="0.5dp"
        android:background="@drawable/background_with_radius_12"
        app:backgroundTint="@color/white"
        app:layout_constraintCircleRadius="@dimen/_16sdp"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/tvMyDoctor"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:importantForAutofill="no" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintBottom_toTopOf="@+id/btnBackgroundCard"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/etSearch"
        tools:listitem="@layout/single_row_of_doctor_list" />

    <TextView
        android:id="@+id/tvNoDataFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Data Found!!!"
        android:textColor="@color/pink"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toTopOf="@+id/recyclerView" />


    <androidx.cardview.widget.CardView
        android:id="@+id/btnBackgroundCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_55sdp"
        android:background="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView">

        <Button
            android:id="@+id/btnRemove"
            style="@style/st_btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_46sdp"
            android:text="@string/remove"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:backgroundTint="@color/pink" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>