<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activity.ActivityNewsFeed">


    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_with_radius_12"
        android:contentDescription="@string/contentDescription"
        android:elevation="@dimen/_1sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintCircleRadius="@dimen/_16sdp"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/pink" />

    <TextView
        android:id="@+id/tvMyDoctor"
        style="@style/st_tv_normal.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/tv_news_feeds"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16sdp" />

    <EditText
        android:id="@+id/etSearch"
        style="@style/st_et_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/background_with_radius_12"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="@dimen/_12sdp"
        android:elevation="@dimen/_1sdp"
        android:hint="@string/hint_search_your_feed"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/_12sdp"
        app:backgroundTint="@color/white"
        app:drawableTint="@color/clr_tv_light_gray"
        app:layout_constraintCircleRadius="@dimen/_16sdp"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/tvMyDoctor" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toEndOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/etSearch"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_1sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCurrentMonthYear"
                        style="@style/st_tv_normal.bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:gravity="top|start"
                        android:text="April, 2021" />

                    <com.michalsvec.singlerowcalendar.calendar.SingleRowCalendar
                        android:id="@+id/single_row_calendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_8sdp"
                        android:layout_marginVertical="@dimen/_8sdp"
                        app:deselection="false"
                        app:longPress="false"
                        app:multiSelection="false" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                tools:listitem="@layout/single_row_of_news_feed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/cvCalender" />

            <TextView
                android:id="@+id/tvNoDataFound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_no_data_found"
                android:layout_centerInParent="true"
                android:textColor="@color/pink"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvCalender"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>